tests/language_modules/11_errors_results/invalid_semantics/plain_function_ok_return.vf
module PlainFunctionOkReturn

function load() returns Integer
is
    return ok 1
end load

end PlainFunctionOkReturn